# MCR-Masters-Game

./: .gitignore  .pre-commit-config.yaml  README.md  log.txt  pyproject.toml  stdout
.github/ISSUE_TEMPLATE/: issue-form.yml
.github/workflows/: close-jira-issue.yml  create-jira-issue.yml
app/: index.html  main.py
app/api/v1/endpoints/: __init__.py  game_websocket_handler.py  game_ws.py  score_check.html  score_check.py  watch.py
app/core/: config.py  error.py  network_service.py  room_manager.py
app/dependencies/: game_manager.py  network_service.py  room_manager.py
app/schemas/: game_ws_message.py  score_check_input.py  score_check_response.py  watch.py  ws.py
app/score_calculator/: main.py  score_calculator.py  tenpai_calculator.py
app/score_calculator/block/: block.py
app/score_calculator/divide/: general_shape.py  honors_and_knitted_shape.py  seven_pairs_shape.py  thirteen_orphans_shape.py
app/score_calculator/enums/: enums.py
app/score_calculator/get_score_yaku/: get_score_yaku.py
app/score_calculator/hand/: hand.py
app/score_calculator/result/: result.py
app/score_calculator/utility/: utility.py
app/score_calculator/utils/: utils.py
app/score_calculator/winning_conditions/: winning_conditions.py
app/score_calculator/yaku/: check.py  yaku.py
app/score_calculator/yaku_check/: blocks_yaku_checker.py  hand_yaku_checker.py  winning_conditions_yaku_checker.py  yaku_checker.py
app/score_calculator/yaku_check/block_yaku/: mixed_double_chow.py  pure_double_chow.py  short_straight.py  two_terminal_chows.py
app/services/game_manager/: action_manager.py  game_manager.py  manager.py  round_manager.py
app/services/game_manager/fsm/: round_fsm.py
app/services/game_manager/helpers/: tenpai_assistant.py
app/services/game_manager/models/: action.py  call_block.py  deck.py  enums.py  event.py  hand.py  manager.py  player.py  round_fsm.py  types.py  winning_conditions.py
app/services/score_calculator/: score_calculator.py  tenpai_calculator.py
app/services/score_calculator/block/: block.py
scripts/: cli.py
tests/: test_action_manager.py  test_deck.py  test_discard_api.py  test_example.py  test_game_hand.py  test_game_manager.py  test_round_fsm.py  test_round_manager.py  test_round_manager_2.py  test_score_calculator_general.py  test_tenpai_tiles.py  test_utils.py  test_watch_endpoint.py  test_ws.py  test_ws_game.py
(+13 files in other folders)
